test-cases/final-dump/unique_cond_error.exp
Error detected during uniqueness checking of module(s) unique_cond_error
[91mfinal-dump/unique_cond_error.wybe:11:9: Reuse of unique variable a:unique_cond_error
[0m
